@@ -1,5 +1,8 @@
 
  &INPUT
+   prefix = 'gold1'
+   postfix = '_WanT'
+   work_dir = './'
    nspts  = 2
    npts   = 100
    nbands = 6
